--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </h1>
             <form id="book-form">
               <div>
-                <label for="title">Add Book</label>
+                <label for="title">Add Book To Read</label>
                 <div>
                   <input
                     type="text"
@@ -69,9 +69,15 @@
                 </div>
                 <input
                   type="submit"
-                  value="Add Book"
-                  class="btn btn-dark"
-                  style="margin-top: 5px;"
+                  value="Book To Read"
+                  class="btnAdd"
+                  style="margin-top: 5px; background-color: rgb(123, 201, 123);"
+                />
+                <input
+                  type="submit"
+                  value="Book I've Read"
+                  class="btnRead"
+                  style="margin: 5 0 0 3; background-color: rgb(134, 183, 247);"
                 />
               </div>
             </form>
