--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 mx-auto">
-          <div class="card card-body mt-5" style="border-radius: 20px;">
+          <div
+            class="card card-body mt-5"
+            style="border-radius: 20px; background-color: rgb(235, 235, 235);"
+          >
             <h1 id="heading display-5 pb-3" style="text-align: center;">
               Nash's Book List
             </h1>
             <form id="book-form">
               <div>
-                <label for="title">Add Book To Read</label>
+                <label for="title">Book</label>
                 <div>
                   <input
                     type="text"
