fix btn to click listener

--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
                   />
                 </div>
                 <input
-                  type="submit"
+                  id="addBook"
+                  type="button"
                   value="Add Book To Read"
                   class="btnAdd"
                   style="margin-top: 5px; background-color: rgb(123, 201, 123);"
                 />
                 <input
-                  type="submit"
+                  id="readBook"
+                  type="button"
                   value="I've Read This One"
                   class="btnRead"
                   style="margin: 5 0 0 3; background-color: rgb(134, 183, 247);"
