improve 2nd table header

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
               <thead>
                 <tr>
                   <th>Titles Read</th>
-                  <th></th>
-                  <th></th>
+                  <th>Author</th>
+                  <th>ISBN #</th>
                   <th></th>
                 </tr>
               </thead>
